--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,17 @@ input {
     text-decoration: underline;
 }
 
+.align-left {
+    text-align: left !important;
+}
+
+.align-center {
+    text-align: center !important;
+}
+
+.align-right {
+    text-align: right !important;
+}
 
 /* ==========================================================================
    Helper classes
